# async-python-tutorial

./: 01_hello_sync.py  02_hello_async_basic.py  03_hello_async_concurrent.py  04_web_fetching_sync.py  05_web_fetching_async.py  06_file_reading_sync.py  07_file_reading_async.py  08_async_sync_hybrid.py  09_future_object.py  10_fastapi_background_tasks.py  11_fastapi_file_upload_background.py  12_celery_worker_tasks.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt
