[project]
name = "asyncio-tutorial"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.6",
    "requests>=2.32.3",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.20",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "flower>=2.0.1",
]
